--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
-	"name":" ",
-	"description":" ",
-	"keywords":[],
-	"license":" ",
-	"require":{},      
-	"require-dev":{},
-	"autoload":{
-		"classmap":[],
-		"psr-4":{
-			"App\\":"app/"
-		}
-	}
-} 
+    "name": " ",
+    "description": " ",
+    "keyword": [],
+    "licence": " ",
+    "require": {},
+    "require-dev": {},
+    "autoload": {
+        "classmap": [],
+        "psr-4": {
+            "App\\": "app/"
+        }
+    }
+}
+
